--- a/cme.qmd
+++ b/cme.qmd
@@ -1,75 +1,149 @@
 ---
-title: Understanding Options
+title: Options
 format: 
   revealjs: 
     theme: default
+    navigation-mode: vertical
+    slide-number: true
+    chalkboard: 
+      buttons: false
 ---
 
-## I. Introduction
-   - Definition of WTI crude oil: Explain what WTI crude oil is and its importance as a benchmark in oil pricing.
-   - Importance of WTI as a benchmark in oil pricing: Discuss the significance of WTI as a benchmark for oil prices and why it is widely used.
+# Definition
 
-## II. Understanding Options Trading
-   - Definition of Options Trading: Give a brief overview of options trading and how it works.
-   - How Options Trading Works: Explain how options trading works, including the concepts of calls and puts and how options are used to hedge or speculate on price movements.
+Options are financial derivatives that give the buyer the right, but not the obligation, to buy or sell an underlying asset at a specified price on or before a specified date. 
 
-## III. WTI Options
-   - Explanation of WTI Options: Discuss what WTI options are and how they differ from other types of options.
-   - Benefits of Trading WTI Options: Highlight the benefits of trading WTI options, including the ability to hedge against price movements and potentially profit from price changes.
-   - Risks involved in Trading WTI Options: Discuss the risks involved in trading WTI options, such as the possibility of losing the entire premium paid.
+## Types of Options
 
-## IV. How WTI Options are Traded
-   - Types of WTI Options: Explain the different types of WTI options, including calls and puts.
-   - How to Trade WTI Options: Discuss the steps involved in trading WTI options, including selecting the right option, determining the right strike price, and managing the trade.
-   - Strategies for Trading WTI Options: Highlight some of the most common strategies for trading WTI options, including covered calls and bull spreads.
+- Underlying type: futures options, futures spread options, equity options, fx options, interest rate options
 
-## V. Factors Affecting WTI Options
-   - Supply and Demand of Crude Oil: Explain how changes in the supply and demand of crude oil can impact WTI options.
-   - Economic and Political Events: Discuss how economic and political events can affect WTI options and crude oil prices.
-   - Market Sentiment: Discuss how market sentiment can impact WTI options and crude oil prices.
+- Payout Type: call, put, exotic
+
+- Settlement Type: cash settled, delivery
+
+- Exercise Time: European, American, Bermudan 
+
+# Pricing
+
+## Option Specs
+
+In order to understand options pricing, we need to look at the following factors:
+
+1. Strike price
+    - The specified price at which the underlying asset can be bought or sold
+
+2. Time to expiration
+    - The amount of time remaining until the option expires
+
+## Market data
+
+1. Price of the underlying asset
+
+2. Volatility of the underlying asset
+    - How much the price of the underlying asset is expected to fluctuate
+
+These factors are used to calculate the theoretical value of an option using a mathematical model such as the Black-Scholes model. However, the actual price of an option may also be influenced by supply and demand in the market.
+
+## WTI Option
+
+- [WTI Option Specs ](https://www.cmegroup.com/markets/energy/crude-oil/light-sweet-crude.contractSpecs.options.html)
+
+## Live Calculator
+
+![](option calc.png)
+
+::: footer
+Source [CME](https://www.cmegroup.com/tools-information/quikstrike/options-calculator.html)
+:::
+
+# Strategies
+
+## Benefits 
+
+- Payoff asymmetry: limited loss from long options 
+ 
+- Leverage: option premium is a fraction of underlying asset price
+
+- Express view of any market condition: bull, bear, range bounding
+
+## Risks
+
+- Unlimited loss
+
+- Margin calls
+
+- Complexity
+
+## Common Strategies
+
+- covered calls 
+
+- call spreads
+
+- straddle/strangle 
+
+## Covered call example
+
+![](wti covercall.png)
+
+::: footer
+Source [CME](https://www.cmegroup.com/tools-information/quikstrike/strategy-simulator.html)
+:::
+
+# Trading
+
+## Market mechanism
+
+   - Market Participants 
+
+   - Margin Requirements
+
+   - Exercising / Assignments 
 
 ## Open Interest
 
+![](wti oi.png){width=70%}
 
-
+::: footer
+Source [CME](https://www.cmegroup.com/tools-information/quikstrike/options-open-interest-profile.html)
+:::
 
 ## Commitments of Traders Report
 
 [![](wti cot.png){width=70%}](https://www.cmegroup.com/tools-information/quikstrike/commitment-of-traders.html)
 
-::: aside
+::: footer
 Source [CME](https://www.cmegroup.com/tools-information/quikstrike/commitment-of-traders.html),
 [CFTC](https://www.cftc.gov/MarketReports/CommitmentsofTraders/index.htm)
 :::
 
-## Categories of Traders
+## 
 
-::: aside
+::: footer
 Source <https://www.cftc.gov/idc/groups/public/@commitmentsoftraders/documents/file/tfmexplanatorynotes.pdf>
 ::: 
 
 Producer/Merchant/Processor/User  
 : A “producer/merchant/processor/user” is an entity that predominantly engages in the production, processing, packing or handling of a physical commodity and uses the futures markets to manage or hedge risks associated with those activities. 
 
-## Categories of Traders
+## 
 
 Swap Dealer 
 : A “swap dealer” is an entity that deals primarily in swaps for a commodity and uses the futures markets to manage or hedge the risk associated with those swaps transactions.  The swap dealer’s counterparties may be speculative traders, like hedge funds, or traditional commercial clients that are managing risk arising from their dealings in the physical commodity.  
 
-::: aside
+::: footer
 Source <https://www.cftc.gov/idc/groups/public/@commitmentsoftraders/documents/file/tfmexplanatorynotes.pdf>
 ::: 
 
-## Categories of Traders
+## 
 
 Money Manager 
 : A “money manager,” for the purpose of this report, is a registered commodity trading advisor (CTA); a registered commodity pool operator (CPO); or an unregistered fund identified by CFTC.7 These traders are engaged in managing and conducting organized futures trading on behalf of clients.
 
-::: aside
+::: footer
 Source <https://www.cftc.gov/idc/groups/public/@commitmentsoftraders/documents/file/tfmexplanatorynotes.pdf>
 ::: 
 
-## VI. Conclusion
-   - Summary of Key Points: Summarize the key points discussed in the presentation.
-   - Final Thoughts on WTI Options: Provide some final thoughts on trading WTI options and the potential opportunities and risks involved.
+
+# Conclusion
 
